# vector-db-api

./: .dockerignore  Dockerfile  README  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  schemas.py  services.py
application/: services.py
client/: sdk.py
domain/: models.py
infrastructure/: leader_follower.py  repositories.py
infrastructure/index/: balltree.py  base.py  factory.py  kdtree.py  linear.py
infrastructure/repositories/: __init__.py  base.py  factory.py  json_repo.py  pickle_repo.py  sqlite_repo.py
tests/: cohere.py  test_app.py  test_cohere.py  test_embeddings.py
utils/: cohere_client.py  pagination.py
